--- a/devcontainer/php/docker-compose.yml
+++ b/devcontainer/php/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     extends:
       file: ../base/docker-compose.yml
       service: devcontainer
+    build:
+      context: .
     environment:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal output_dir=/tmp/xdebug profiler_output_name=cachegrind.out.%R.%u}
