--- a/devcontainer/base/docker-compose.yml
+++ b/devcontainer/base/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       ssh:
         - default # lets the builder connect to the default SSH agent
       args:
+        - PUID=${PUID:-1000}
+        - PGID=${PGID:-1000}
         - TZ=${TIMEZONE-Europe/Amsterdam}
     tty: true
     extra_hosts:
