feat(neofetch): display system information
I like to see system information at start up and have specifically
configured my shell to run neofetch when my profile loads. Not at all
necessary but convenient and not less important: sexy

--- a/devcontainer/base/Dockerfile
+++ b/devcontainer/base/Dockerfile
@@ -36,6 +36,7 @@ RUN \
   fzf \
   ripgrep \
   zsh \
+  neofetch \
   && echo "*** Setting locale and timezone information ***" \
   && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen && locale-gen \
   && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime \
