fix: depends_on cannot be used when service is to be extended
Should be defined in the child docker-compose.yml instead

--- a/devcontainer/php/docker-compose.yml
+++ b/devcontainer/php/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     extends:
       file: ../base/docker-compose.yml
       service: phpmyadmin
+    depends_on:
+      - mysql
 
   redis:
     extends:
