--- a/devcontainer/base/docker-compose.yml
+++ b/devcontainer/base/docker-compose.yml
@@ -40,7 +40,7 @@ services:
   #   volumes:
   #     - $HOME/Development/${APP_NAME}/nuxt:/var/www/html
   #   command: npm run dev
-  #   depends_on:
+  #   depends_on: # NOTE: cannot be used when extending, extract to child
   #     - php
 
   mysql:
@@ -82,8 +82,6 @@ services:
     restart: unless-stopped
     ports:
       - ${PHPMYADMIN_PORT:-8888}:80
-    depends_on:
-      - mysql
     healthcheck:
       test: ["CMD", "curl", "-Ss", "http://localhost/robots.txt"]
       retries: 3
