--- a/devcontainer/ruby/docker-compose.yml
+++ b/devcontainer/ruby/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     extends:
       file: ../base/docker-compose.yml
       service: phpmyadmin
+    depends_on:
+      - mysql
 
   redis:
     extends:
