refactor(docker): replace source with . to avoid changing shells
We should now be fully POSIX compatible

--- a/devcontainer/base/Dockerfile
+++ b/devcontainer/base/Dockerfile
@@ -15,8 +15,6 @@ ARG USER=abc
 
 WORKDIR /app
 
-SHELL ["/bin/sh", "-c"]
-
 RUN \
   echo "*** Installing core dependencies ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
@@ -58,6 +56,6 @@ RUN \
   echo "*** Setting up Asdf ***" \
   && git clone https://github.com/asdf-vm/asdf.git /config/.asdf \
   && echo "*** Installing zoxide ***" \
-  && . /config/.asdf/asdf.sh \
+  && ASDF_DIR="${HOME}/.asdf" . /config/.asdf/asdf.sh \
   && asdf plugin add zoxide https://github.com/nyrst/asdf-zoxide.git \
   && asdf install zoxide latest
