--- a/devcontainer/php/Dockerfile
+++ b/devcontainer/php/Dockerfile
@@ -18,8 +18,6 @@ WORKDIR /app
 
 USER root
 
-SHELL ["/bin/sh", "-c"]
-
 RUN \
   echo "*** Override timezone information ***" \
   && ln -snf /usr/share/zoneinfo/${TZ} /etc/localtime && echo ${TZ} >> /etc/timezone \
@@ -63,13 +61,11 @@ RUN \
 
 USER $USER
 
-SHELL ["/bin/zsh", "-c"]
-
 RUN \
   echo "*** Installing Composer to $HOME/.local/bin ***" \
   && php -r "readfile('https://getcomposer.org/installer');" | php -- --install-dir=/config/.local/bin --filename=composer \
   && echo "*** Installing Node.js ***" \
-  && source /config/.asdf/asdf.sh \
+  && ASDF_DIR="${HOME}/.asdf" . /config/.asdf/asdf.sh \
   && asdf plugin add nodejs https://github.com/asdf-vm/asdf-nodejs.git \
   && asdf install nodejs ${NODE_VERSION} \
   && asdf global nodejs ${NODE_VERSION}
