--- a/devcontainer/php/.devcontainer.json
+++ b/devcontainer/php/.devcontainer.json
@@ -14,6 +14,9 @@
         "[php]": {
           "editor.defaultFormatter": "open-southeners.laravel-pint"
         },
+        "[markdown]": {
+          "editor.defaultFormatter": "davidanson.vscode-markdownlint"
+        },
         "bladeFormatter.format.noMultipleEmptyLines": true,
         "bladeFormatter.format.sortHtmlAttributes": "idiomatic",
         "bladeFormatter.format.sortTailwindcssClasses": true,
