--- a/devcontainer/ruby/.devcontainer.json
+++ b/devcontainer/ruby/.devcontainer.json
@@ -14,6 +14,9 @@
         "[ruby]": {
           "editor.defaultFormatter": "castwide.solargraph"
         },
+        "[markdown]": {
+          "editor.defaultFormatter": "davidanson.vscode-markdownlint"
+        },
         "dotfiles.repository": "99linesofcode/dotfiles",
         "dotfiles.targetPath": "/config/dotfiles",
         "dotfiles.installCommand": "/config/dotfiles/install.sh",
