--- a/devcontainer/php/docker-compose.yml
+++ b/devcontainer/php/docker-compose.yml
@@ -1,10 +1,24 @@
 services:
-  devcontainer:
-    extends:
-      file: ../base/docker-compose.yml
-      service: devcontainer
+  # devcontainer:
+  #   extends:
+  #     file: ../base/docker-compose.yml
+  #     service: devcontainer
+  #   build:
+  #     context: .
+  #   environment:
+  #     - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
+  #     - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal output_dir=/tmp/xdebug profiler_output_name=cachegrind.out.%R.%u}
+  #   depends_on:
+  #     - meilisearch
+  #     - mysql
+  #     - redis
+  #   volumes:
+  #     - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json # necessary when installing packages from a private repository
+  #     # - $HOME/Development/profiling/${APP_NAME}:/tmp/xdebug # mount xdebug and cachegrind output for profiling analysis on host machine
+
+  php:
     build:
-      context: .
+      context: ./frankenphp/
     environment:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal output_dir=/tmp/xdebug profiler_output_name=cachegrind.out.%R.%u}
@@ -13,7 +27,7 @@ services:
       - mysql
       - redis
     volumes:
-      - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json # necessary when installing packages from a private repository
+      - $HOME/Development/${APP_NAME}:/app
       # - $HOME/Development/profiling/${APP_NAME}:/tmp/xdebug # mount xdebug and cachegrind output for profiling analysis on host machine
 
   mysql:
