--- a/devcontainer/ruby/docker-compose.yml
+++ b/devcontainer/ruby/docker-compose.yml
@@ -1,10 +1,13 @@
 services:
-  devcontainer:
-    extends:
-      file: ../base/docker-compose.yml
-      service: devcontainer
-    build:
-      context: .
+  # devcontainer:
+  #   extends:
+  #     file: ../base/docker-compose.yml
+  #     service: devcontainer
+  #   build:
+  #     context: .
+  #   depends_on:
+  #     - mysql
+  #     - redis
     depends_on:
       - mysql
       - redis
