refactor: volume mount application code from parent directory
docker-base is intended to live inside the application root directory in
a submodule/subdirectory named docker/

--- a/devcontainer/base/docker-compose.yml
+++ b/devcontainer/base/docker-compose.yml
@@ -36,7 +36,7 @@ services:
   #     - NUXT_HOST=nodejs
   #     - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
   #   volumes:
-  #     - $HOME/Development/${APP_NAME}/nuxt:/var/www/html
+  #     - ../nuxt:/var/www/html
   #   command: npm run dev
   #   depends_on: # NOTE: cannot be used when extending, extract to child
   #     - php
