--- a/devcontainer/base/docker-compose.yml
+++ b/devcontainer/base/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       - MYSQL_DATABASE=${DB_DATABASE}
       - MYSQL_USER=${DB_USERNAME}
       - MYSQL_PASSWORD=${DB_PASSWORD}
+    volumes:
+      - mysql:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
       retries: 3
@@ -62,6 +64,8 @@ services:
     image: redis:alpine
     ports:
       - ${FORWARD_REDIS_PORT:-6379}:6379
+    volumes:
+      - redis:/data
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       retries: 3
@@ -95,6 +99,14 @@ services:
       test: ["CMD", "curl", "-Ss", "http://localhost:8025/livez"]
       retries: 3
       timeout: 5s
+
+volumes:
+  mysql:
+    name: ${APP_NAME}-vol-mysql
+    driver: local
+  redis:
+    name: ${APP_NAME}-vol-redis
+    driver: local
 
 networks:
   default:
