--- a/devcontainer/php/docker-compose.yml
+++ b/devcontainer/php/docker-compose.yml
@@ -34,9 +34,8 @@ services:
     extends:
       file: ../base/docker-compose.yml
       service: mysql
-    volumes:
-      - mysql:/var/lib/mysql
-      # - $HOME/dbdump.sql:/docker-entrypoint-initdb.d/dbdump.sql # dbdump.sql is read on init and can be used to prepopulate the db
+    # volumes:
+    #   - $HOME/dbdump.sql:/docker-entrypoint-initdb.d/dbdump.sql # dbdump.sql is read on init and can be used to prepopulate the db
 
   phpmyadmin:
     extends:
@@ -49,8 +48,6 @@ services:
     extends:
       file: ../base/docker-compose.yml
       service: redis
-    volumes:
-      - redis:/data
 
   soketi:
     container_name: ${APP_NAME}-soketi
@@ -98,12 +95,6 @@ services:
   #     - $HOME/Development/profiling/${APP_NAME}:/tmp
 
 volumes:
-  mysql:
-    name: ${APP_NAME}-vol-mysql
-    driver: local
-  redis:
-    name: ${APP_NAME}-vol-redis
-    driver: local
   meilisearch:
     name: ${APP_NAME}-vol-meilisearch
     driver: local
